--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel='stylesheet' href='style.css'/>
 	<script src='script.js'></script>
+	<title>TopNotch's Clean & Basic</title>
 </head>
 
 <body>
