--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel='stylesheet' href='style.css'/>
 	<script src='script.js'></script>
-	<title>TopNotch's Clean & Basic</title>
+	<title>Clean & Basic</title>
 </head>
 
 <body>
@@ -42,6 +42,9 @@
     
     <footer class="mainFooter">
         <p>Copyright 2014 &copy; TopNotch - </p>
+        <a href="http://www.w3.org/html/logo/">
+<img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3.png" width="133" height="64" alt="HTML5 Powered with CSS3 / Styling" title="HTML5 Powered with CSS3 / Styling">
+</a>
     </footer>
 </body>
 </html>
