--- a/Charlie/index.html
+++ b/Charlie/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel='stylesheet' href='style.css'/>
 	<script src='script.js'></script>
-	<title>Clean & Basic</title>
+	<title>Basic & Clean</title>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
     </div>
     
     <footer class="mainFooter">
-        <p>Copyright 2014 &copy; TopNotch - </p>
+        <p>Copyright 2014 &copy; TopNotch</p>
     </footer>
 </body>
 </html>
